[metadata]
name = rssreader-client
version = 1.0
author = Reloading
author_email = example@hotmail.com
description = Python client for RSS Reader API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rss, feed, api, client
url = https://github.com/burakozcn01/rssreader-client
project_urls =
    Bug Tracker = https://github.com/burakozcn01/rssreader-client/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0
    typing-extensions>=4.0.0; python_version < "3.8"

[options.packages.find]
exclude =
    tests*

[options.package_data]
rssreader =
    py.typed